[build-system]
requires = ["uv_build>=0.7.21,<0.8.0"]
build-backend = "uv_build"

[project]
name = "ChainlitChat"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = ["draive[openai]~=0.78.0", "httpx~=0.28", "asyncpg~=0.30"]

[dependency-groups]
chat = ["chainlit~=2.0", "starlette~=0.41", "fastapi~=0.115", "pillow~=11.0"]
migrations = []
dev = ["bandit~=1.7", "pyright~=1.1", "ruff~=0.12"]

[tool.uv.build-backend]
namespace = true

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv", ".git", ".cache"]
lint.select = ["E", "F", "A", "I", "B", "PL", "W", "C", "RUF", "UP"]
lint.ignore = ["A005"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"./tests/*.py" = ["PLR2004"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["./src"]
exclude = ["**/node_modules", "**/__pycache__"]
ignore = []
reportMissingImports = true
reportMissingTypeStubs = false
userFileIndexingLimit = -1
useLibraryCodeForTypes = true

[tool.pyright.analysis]
typeCheckingMode = "strict"
diagnosticMode = "workspace"
