[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[project]
name = "postgres-example"
version = "0.1.0"
requires-python = "~=3.13.7"
dependencies = ["draive[openai, postgres]>=0.91.4", "pgvector"]

[project.urls]
Homepage = "https://miquido.com"

[project.optional-dependencies]
dev = ["bandit~=1.7", "pyright~=1.1", "ruff~=0.14"]

[tool.uv.build-backend]
namespace = true

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = [".venv", ".git", ".cache"]
lint.select = ["E", "F", "A", "I", "B", "PL", "W", "C", "RUF", "UP"]
lint.ignore = ["A005"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "./.venv"
include = ["./src"]
exclude = ["**/node_modules", "**/__pycache__"]
ignore = []
stubPath = "./stubs"
reportMissingImports = true
reportMissingTypeStubs = false
useLibraryCodeForTypes = true
typeCheckingMode = "strict"
