[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qdrant-example"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["draive[cohere]~=0.69.0", "qdrant-client~=1.12"]

[project.urls]
Homepage = "https://miquido.com"

[project.optional-dependencies]
dev = ["bandit~=1.7", "pyright~=1.1", "ruff~=0.11"]

[tool.hatch.build]
sources = ["./src"]
packages = ["./src"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv", ".git", ".cache"]
lint.select = ["E", "F", "A", "I", "B", "PL", "W", "C", "RUF", "UP"]
lint.ignore = ["A005"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "./.venv"
include = ["./src"]
exclude = ["**/node_modules", "**/__pycache__"]
ignore = []
stubPath = "./stubs"
reportMissingImports = true
reportMissingTypeStubs = false
userFileIndexingLimit = -1
useLibraryCodeForTypes = true

[tool.pyright.analysis]
diagnosticMode = "workspace"
typeCheckingMode = "strict"
