[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "draive-basics"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python",
  "Typing :: Typed",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "draive[openai]"
]

[project.urls]
Homepage = "https://miquido.com"

[project.optional-dependencies]
dev = [
  "ruff~=0.5.0",
  "pyright~=1.1",
  "bandit~=1.7",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv", ".git", ".cache"]
lint.select = ["E", "F", "A", "I", "B", "PL", "W", "C", "RUF", "UP"]
lint.ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"./tests/*.py" = ["PLR2004"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["Argument", "draive.Argument"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "./.venv"
include = [
  "./src",
]
exclude = [
  "**/node_modules",
  "**/__pycache__",
]
ignore = []
reportMissingImports = true
reportMissingTypeStubs = true
typeCheckingMode = "strict"
userFileIndexingLimit = -1
useLibraryCodeForTypes = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.model"]

[tool.setuptools.packages.find]
where = ["src"]
